fixed alignment of weather and spotify

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,9 +40,9 @@
 }
 
 .spotify-box {
-	margin-left: 180px;
+	margin-left: 130px;
 	margin-top: 15px;
-	right: 50px;
+	right: 40px;
 	bottom: 0px;
 	height: 400px;
 
